@@ -1,6 +1,12 @@
 2015-05-20  William D Clinger <will@ccs.neu.edu>
 
-	* larceny-tests/run/time.sps: Updated versionfrom Larceny.
+	* larceny-tests/tests/scheme/lazy.sld: Another Larceny test.
+	* larceny-tests/run/lazy.sps: New test driver.
+	* Makefile.am (LARCENY_SIMPLE_TESTS1): Add lazy.
+
+2015-05-20  William D Clinger <will@ccs.neu.edu>
+
+	* larceny-tests/run/time.sps: Updated version from Larceny.
 	* larceny-tests/tests/scheme/char.body-alt.scm: New, from Larceny.
 	* larceny-tests/tests/scheme/char.sld: Updated runner from Larceny.
 
